Fixed the names of the overflowing items

--- a/Web/public/css/item_searched.css
+++ b/Web/public/css/item_searched.css
@@ -156,15 +156,11 @@ input.list {
 
 
 .ellipsis {
-    overflow:hidden;
-    width: 60px;
-    direction:rtl; 
-    margin-left:15px;
+    width: 900px;
+    overflow: auto;
     white-space: nowrap;
 }
 
-.ellipsis:after {
-  position:absolute;left:0px; content:"...";
-}​
+
 
 
